--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -11,15 +11,19 @@
       <th>Title</th>
       <th>Description</th>
       <th>Category</th>
+      <th>destroy</th>
     </tr>
   </thead>
   <tbody>
-   <% @lessons.each do |lesson| %>
+   <% @lesson.each do |lesson| %>
    <tr>
     <td><%= link_to 'view', lesson %> / <%= link_to 'edit', edit_lesson_path(lesson) %></td>
     <td><%= lesson.title %></td>
     <td><%= truncate(lesson.description, length: 100) { link_to "(read more)", lesson } %></td>
     <td><%= lesson.category %></td>
+    <td><%= link_to 'delete', lesson, method: :delete,
+                                      data: { confirm: "You sure?" } %>
+    </td>
   </tr>
   <% end %>
 </tbody>
