--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,18 +1,27 @@
-<h1>Showing Users</h1>
-
-<table>
-  <tr>
-    <th>User Name</th>
-    <th>Email</th>
-    <th>First Name</th>
-    <th>Last Name</th>
-  </tr>
-  <% @users.each do |user| %>
-  <tr>
-    <td><%= user.username %></td>
-    <td><%= user.email %></td>
-    <td><%= user.firstname %></td>
-    <td><%= user.lastname %></td>
-  </tr>
-  <% end %>
+<% if @user.lessons.any? %>
+<h4><%= @user.username %> <small>(<%= @user.lessons.count %>)</small></h4>
+<% end %>
+<table class="table">
+  <thead>
+    <h3></h3>
+    <tr>
+      <th>Title</th>
+      <th>Description</th>
+      <th>Action</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <% @lessons.each do |lesson| %>
+      <td><%= lesson.title %></td>
+      <td><%= truncate(lesson.description, length: 100) { link_to "(read more)", lesson } %></td>
+      <td>
+        <%= link_to 'edit', edit_lesson_path %> |
+        <%= link_to 'flip', flip_lesson_path %> |
+        <%= link_to 'delete', lesson, method: :delete,
+                                      data: { confirm: "You sure?" } %>
+      </td>
+    </tr>
+    <% end %>
+  </tbody>
 </table>
