--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-  <h1>Create lessons worth sharing around YouTube videos</h1>
+  <h1>Create lessons worth sharing</h1>
   <table class="table">
     <thead>
 <!--
