--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,16 +25,16 @@
     <ul class="nav navbar-nav">
       <li><%= link_to "Lessons", lessons_path %></li>
     </ul>
-    <form class="navbar-form navbar-left" role="search">
+<!--     <form class="navbar-form navbar-left" role="search">
       <div class="form-group">
         <input type="text" class="form-control" placeholder="Search">
       </div>
       <button type="submit" class="btn btn-default">Submit</button>
     </form>
-    <ul class="nav navbar-nav navbar-right">
+ -->    <ul class="nav navbar-nav navbar-right">
+        <% if current_user %>
       <li><%= link_to '+ add a lesson', new_lesson_path %></li>
       <li class="dropdown">
-        <% if current_user %>
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Signed in as <%= current_user.firstname %> <%= current_user.lastname %>
           <b class="caret"></b>
         </a>
