--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,45 +1,20 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Bootstrap 101 Template</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Bootstrap -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
-<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-<![endif]-->
-</head>
-<body>
-
-  <h1>Create lessons worth sharing</h1>
+  <h3 class="lead text-center">Create lessons worth sharing</h3>
   <table class="table">
     <thead>
-<!--
+    </thead>
+    <tbody>
+      <%# Lesson.where("id <= ?", 3).each do |lesson| %>
+      <%# lessons.each do |lesson| %>
       <tr>
-        <th>Science<br />
-          Fiction<br />
-          Science Fiction<br />
-        </th>
+        <td><%= Lesson.find(20).title %></td>
+        <td><%= Lesson.find(20).title %></td>
+        <td><%= Lesson.find(3).title %></td>
+        <td><%= Lesson.find(5).title %></td>
+        <td><%= Lesson.find(6).title %></td>
+        <td><%= Lesson.find(8).title %></td>
       </tr>
-    -->
-  </thead>
-  <tbody>
-    <%# Lesson.where("id <= ?", 3).each do |lesson| %>
-    <%# lessons.each do |lesson| %>
-    <tr>
-      <td><%= Lesson.find(20).title %></td>
-      <td><%= Lesson.find(20).title %></td>
-      <td><%= Lesson.find(3).title %></td>
-      <td><%= Lesson.find(5).title %></td>
-      <td><%= Lesson.find(6).title %></td>
-      <td><%= Lesson.find(8).title %></td>
-    </tr>
-    <tr>
-      <%# Can I use '.try' instead of '.nil'? Begin Example: %>
+      <tr>
+        <%# Can I use '.try' instead of '.nil'? Begin Example: %>
 <!--      =begin
       # without try
       unless @number.nil?
@@ -50,64 +25,43 @@
       @number.try(:next)
       =end
       <%# End Example %>
--->
-      <td>
-        <%= image_tag("http://placehold.it/291x461.jpeg/EEEEEE/C8C8C8") %>
-        <% unless Lesson.find(3).picture.nil? %>
-        <%= image_tag Lesson.find(3).picture.thumb("200x").url %>
-        <% end %>
-      </td>
-      <td>
-        <%= image_tag("http://placehold.it/291x461.jpeg/EEEEEE/C8C8C8") %>
-        <% unless Lesson.find(3).picture.nil? %>
-        <%= image_tag Lesson.find(3).picture.thumb("200x").url %>
-        <% end %>
-      </td>
-      <td>
-        <%= image_tag("http://placehold.it/291x461.jpeg/EEEEEE/C8C8C8") %>
-        <% unless Lesson.find(3).picture.nil? %>
-        <%= image_tag Lesson.find(3).picture.thumb("200x").url %>
-        <% end %>
-      </td>
-      <td>
-        <%= image_tag("http://placehold.it/291x461.jpeg/EEEEEE/C8C8C8") %>
-        <% unless Lesson.find(3).picture.nil? %>
-        <%= image_tag Lesson.find(3).picture.thumb("200x").url %>
-        <% end %>
-      </td>
-      <td>
-        <%= image_tag("http://placehold.it/291x461.jpeg/EEEEEE/C8C8C8") %>
-        <% unless Lesson.find(3).picture.nil? %>
-        <%= image_tag Lesson.find(3).picture.thumb("200x").url %>
-        <% end %>
-      </td>
-      <td>
-        <%= image_tag("http://placehold.it/291x461.jpeg/EEEEEE/C8C8C8") %>
-        <% unless Lesson.find(3).picture.nil? %>
-        <%= image_tag Lesson.find(3).picture.thumb("200x").url %>
-        <% end %>
-      </td>
-    </tr>
-  </tbody>
+    -->
+    <td>
+      <%= image_tag("http://placehold.it/291x461.jpeg/EEEEEE/C8C8C8") %>
+      <% unless Lesson.find(3).picture.nil? %>
+      <%= image_tag Lesson.find(3).picture.thumb("200x").url %>
+      <% end %>
+    </td>
+    <td>
+      <%= image_tag("http://placehold.it/291x461.jpeg/EEEEEE/C8C8C8") %>
+      <% unless Lesson.find(3).picture.nil? %>
+      <%= image_tag Lesson.find(3).picture.thumb("200x").url %>
+      <% end %>
+    </td>
+    <td>
+      <%= image_tag("http://placehold.it/291x461.jpeg/EEEEEE/C8C8C8") %>
+      <% unless Lesson.find(3).picture.nil? %>
+      <%= image_tag Lesson.find(3).picture.thumb("200x").url %>
+      <% end %>
+    </td>
+    <td>
+      <%= image_tag("http://placehold.it/291x461.jpeg/EEEEEE/C8C8C8") %>
+      <% unless Lesson.find(3).picture.nil? %>
+      <%= image_tag Lesson.find(3).picture.thumb("200x").url %>
+      <% end %>
+    </td>
+    <td>
+      <%= image_tag("http://placehold.it/291x461.jpeg/EEEEEE/C8C8C8") %>
+      <% unless Lesson.find(3).picture.nil? %>
+      <%= image_tag Lesson.find(3).picture.thumb("200x").url %>
+      <% end %>
+    </td>
+    <td>
+      <%= image_tag("http://placehold.it/291x461.jpeg/EEEEEE/C8C8C8") %>
+      <% unless Lesson.find(3).picture.nil? %>
+      <%= image_tag Lesson.find(3).picture.thumb("200x").url %>
+      <% end %>
+    </td>
+  </tr>
+</tbody>
 </table>
-</body>
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
