fixed dashboard routing

--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -10,7 +10,7 @@
   <% end %>
   <div class="media-body">
     <h4 class="media-heading">
-      <small><%= @lesson.category %>: </small><%= @lesson.title %>
+      <small><%= @lesson.category %></small><%= @lesson.title %>
     </h4>
     <%= @lesson.description %>
   </div>
