--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,34 +31,36 @@
       </div>
       <button type="submit" class="btn btn-default">Submit</button>
     </form>
- -->    <ul class="nav navbar-nav navbar-right">
-        <% if current_user %>
-      <li><%= link_to '+ add a lesson', new_lesson_path %></li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Signed in as <%= current_user.firstname %> <%= current_user.lastname %>
-          <b class="caret"></b>
-        </a>
-        <% else %>
-        <li><%= link_to 'Sign In', new_session_path %></li>
-        <li><%= link_to 'Register', new_user_path %></li>
-        <li><%= link_to '', new_user_path %></li>
-        <% end %>
-        <ul class="dropdown-menu">
-          <li><%= link_to_unless(current_user.nil?, 'Dashboard', dashboard_path) %></li>
-          <li class="divider"></li>
-          <li>
-            <%= link_to_unless(current_user.nil?, "Sign Out", session_path, method: :delete) %>
-          </li>
-          <%# end %>
-        </ul>
+  -->    <ul class="nav navbar-nav navbar-right">
+  <% if current_user %>
+  <li><%= link_to '+ add a lesson', new_lesson_path %></li>
+  <li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Signed in as <%= current_user.firstname %> <%= current_user.lastname %>
+      <b class="caret"></b>
+    </a>
+    <% else %>
+    <li><%= link_to 'Sign In', new_session_path %></li>
+    <li><%= link_to 'Register', new_user_path %></li>
+    <li><%= link_to '', new_user_path %></li>
+    <% end %>
+    <ul class="dropdown-menu">
+      <li><%= link_to_unless(current_user.nil?, 'Dashboard', dashboard_path) %></li>
+      <li class="divider"></li>
+      <li>
+        <%= link_to_unless(current_user.nil?, "Sign Out", session_path, method: :delete) %>
       </li>
+      <%# end %>
     </ul>
-  </div><!-- /.navbar-collapse -->
+  </li>
+</ul>
+</div><!-- /.navbar-collapse -->
 </nav>
 
 <div class="container">
-<p class="text-primary"><%= notice %></p>
-<%= yield %>
+  <p class="text-primary">
+  <%= notice %>
+  </p>
+  <%= yield %>
 </div>
 </body>
 </html>
