sort user lessons DESC, changed users controller from @user to @users - updated users idex.html

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
     <th>Last Name</th>
     <th>Action</th>
   </tr>
-  <% @user.each do |user| %>
+  <% @users.each do |user| %>
   <tr>
     <td><%= user.username %></td>
     <td><%= user.email %></td>
