--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,17 +1,31 @@
-<table>
+<% provide(:title, 'Users') %>
+
+<table class="table">
   <tr>
     <th>User Name</th>
     <th>Email</th>
     <th>First Name</th>
     <th>Last Name</th>
-    <th>Action</th>
+    <th>Lessons</th>
   </tr>
   <% @users.each do |user| %>
   <tr>
-    <td><%= user.username %></td>
-    <td><%= user.email %></td>
-    <td><%= user.firstname %></td>
-    <td><%= user.lastname %></td>
-    <td><%= link_to 'view profile', user %></td>  </tr>
+    <td>
+      <%= user.username %>
+    </td>
+    <td>
+      <%= user.email %>
+    </td>
+    <td>
+      <%= user.firstname %>
+    </td>
+    <td>
+      <%= user.lastname %>
+    </td>
+    <td class="text-center">
+      <a href="<%= user_path(user) %>"><span class="badge"><%= user.lessons.count %></span></a>
+    </td>
+  </tr>
   <% end %>
 </table>
+
